fix: 라벨 수정 요청 validation 강화 (#101)
Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>